--- a/foundations/02-class-id-selectors/style.css
+++ b/foundations/02-class-id-selectors/style.css
@@ -1,9 +1,10 @@
-.odd {
+.odd,
+.cooler{
     background-color: rgb(241, 184, 194);
     font-family: Verdana, DejaVu Sans, sans-serif;
 }
 
-.odd.cooler{
+.cooler{
     font-size: 24px;
 }
 
