--- a/flex/05-flex-modal/style.css
+++ b/flex/05-flex-modal/style.css
@@ -16,10 +16,13 @@ body {
 }
 
 .modal {
+  display: flex;
   background: white;
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  padding: 15px;
+  gap: 15px;
 }
 
 .icon {
@@ -33,8 +36,23 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+
+}
+.right{
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.top{
+  display: flex;
+  justify-content: space-between;
 }
 
+.header{
+  font-weight: bold;
+  font-size: 1.25rem;
+
+}
 .close-button {
   background: #eee;
   border-radius: 50%;
