--- a/flex/07-flex-layout-2/style.css
+++ b/flex/07-flex-layout-2/style.css
@@ -2,28 +2,77 @@ body {
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
   margin: 0;
   min-height: 100vh;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
 }
 
 .header {
+  display: flex;
+  justify-content: start;
+  align-items: center;
+  padding: 0 16px;
   height: 72px;
+  font-size: 32px;
+  font-weight: 900;
   background: darkmagenta;
   color: white;
 }
 
+.content {
+  display: flex;
+  flex-direction: row;
+  flex: 4
+}
+
+.sidebar {
+  display: flex;
+  flex: 0 0 300px;
+  padding:  16px;
+  background: royalblue;
+  box-sizing: border-box;
+}
+
+.cards{
+  padding: 32px;
+  display: flex; 
+  gap: 1rem;
+  justify-content:flex-start ;
+  flex-direction: row;
+  flex: 2;
+  flex-wrap: wrap;
+}
+
+.card {
+  display: flex;
+  padding: 32px;
+  flex: 0 0 300px;
+  border: 1px solid #eee;
+  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
+  border-radius: 4px;
+}
+
 .footer {
+  display: flex;
+  justify-content: center;
+  align-items: center;
   height: 72px;
   background: #eee;
   color: darkmagenta;
 }
 
-.sidebar {
-  width: 300px;
-  background: royalblue;
-  box-sizing: border-box;
+
+ul{
+  padding: 0;
+  list-style: none;
 }
 
-.card {
-  border: 1px solid #eee;
-  box-shadow: 2px 4px 16px rgba(0,0,0,.06);
-  border-radius: 4px;
+ul li{
+  margin: 1rem;
+}
+ul a{
+  
+  font-size: 24px;
+  color: white;
+  text-decoration: none;
 }
