--- a/grid/03-grid-layout-3/style.css
+++ b/grid/03-grid-layout-3/style.css
@@ -4,6 +4,9 @@
 }
 
 .container {
+  display: grid;
+  gap: 4px;
+  grid-template-columns: 1fr 4fr;
   text-align: center;
 }
 
@@ -16,16 +19,31 @@
 }
 
 .header {
+  grid-column: span 2;
+  display: grid;
+  align-items: center;
+  white-space: nowrap;
   background-color: #393f4d;
+  grid-template-columns: repeat(2, 4fr);
 }
 
 .menu ul,
 .menu li {
+  display: grid;
   font-size: 16px;
+  list-style: none;
+  text-align: center;
+  grid-template-columns: repeat(4, 1fr);
 }
 
 .sidebar {
+  grid-column: 1;
+  align-items: stretch;
+  display: inline-grid;
+  gap: 50px;
+  align-self: center;
   background-color: #C50208;
+  grid-template-rows: repeat(autofill, minmax(150px, 1fr));
 }
 
 .sidebar .photo {
@@ -54,6 +72,8 @@
 }
 
 .article {
+  grid-column: 2;
+  gap: 15px;
   background-color: #bccbde;
 }
 
@@ -65,6 +85,7 @@
 }
 
 .article .card {
+  height: 200px;
   background-color: #FFFFFF;
   color: black;
   text-align: center;
@@ -82,6 +103,7 @@
 }
 
 .footer {
+  grid-column: span 2;
   background-color: #393f4d;
 }
 
